--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-form-data": "^2.0.23",
     "generate-unique-id": "^2.0.3",
     "jsonwebtoken": "^9.0.2",
+    "lzjs": "^1.3.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5"
