--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "cpass": "^2.3.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-form-data": "^2.0.23",
     "generate-unique-id": "^2.0.3",
     "jsonwebtoken": "^9.0.2",
-    "lzjs": "^1.3.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "xor-crypt": "^1.1.1"
   }
 }
